5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1801_2574.log
== TEST (2019-06-12 18:43:55) 
-- CODE:
senha = innput("qual a sua senha")
print(senha)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    senha = innput("qual a sua senha")
NameError: name 'innput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:44:04) 
-- CODE:
senha = input("qual a sua senha")
print(senha)
-- OUTPUT:
123A456b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:44:13) 
-- CODE:
senha = input("qual a sua senha:")
print(senha)
-- OUTPUT:
123A456b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:50:09) 
-- CODE:
from numpy import*
senha = input("qual a sua senha:")

print(len(senha))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:34) 
-- CODE:
from numpy import*

s = input("qual a sua senha:")

i = 0 
for i in s:
	if size(s)>=8:
		i = "SENHA VALIDA"
	elif v[s] == v[i].isupper()
		i = "SENHA VALIDA"
	elif v[s] == v[i].islower()
		i = "SENHA VALIDA"
print(i)
-- ERROR:
File "XXXX", line 9
    elif v[s] == v[i].isupper()
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:20) 
-- CODE:
from numpy import*

s = input("qual a sua senha:")

i = 0 
for i in s:
	if size(s)>=8:
		i = "SENHA VALIDA"
	elif v[s] == s[i].isupper()
		i = "SENHA VALIDA"
	elif v[s] == s[i].islower()
		i = "SENHA VALIDA"
print(i)
-- ERROR:
File "XXXX", line 9
    elif v[s] == s[i].isupper()
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:32) 
-- CODE:
from numpy import*

s = input("qual a sua senha:")

i = 0 
for i in s:
	if size(s)>=8:
		i = "SENHA VALIDA"
	elif v[s] == s[i].isupper():
		i = "SENHA VALIDA"
	elif v[s] == s[i].islower():
		i = "SENHA VALIDA"
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:49) 
-- CODE:
from numpy import*

s = input("qual a sua senha:")

i = 0 
for i in s:
	if size(s)>=8:
		i = "SENHA VALIDA"
	elif s[i] == s[i].isupper():
		i = "SENHA VALIDA"
	elif s[i] == s[i].islower():
		i = "SENHA VALIDA"
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
